Preventing tooltip from wrapping

--- a/frontend/styles/Tooltip.module.scss
+++ b/frontend/styles/Tooltip.module.scss
@@ -13,4 +13,5 @@
     border-radius: var(--tooltip-border-radius);
     font-weight: 500;
     font-size: 14px;
+    white-space: nowrap;
 }
